tests/ui/moves/moves-based-on-type-cyclic-types-issue-4821.stderr
error[E0382]: use of partially moved value: `node`
  --> $DIR/moves-based-on-type-cyclic-types-issue-4821.rs:13:13
   |
LL |         Some(right) => consume(right),
   |              ----- value partially moved here
...
LL |     consume(node) + r
   |             ^^^^ value used here after partial move
   |
   = note: partial move occurs because value has type `Box<List>`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         Some(ref right) => consume(right),
   |              +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
